# sterling

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/sterling-backend/: Cargo.toml
crates/sterling-backend/src/: main.rs  routes.rs  state.rs
crates/sterling-core/: Cargo.toml
crates/sterling-core/src/: error.rs  lib.rs  provider.rs
crates/sterling-frontend-chat/: Cargo.toml
crates/sterling-frontend-cli/: Cargo.toml
crates/sterling-provider-anthropic/: Cargo.toml
crates/sterling-provider-anthropic/src/: error.rs  lib.rs  messages.rs  types.rs
crates/sterling-provider-openai/: Cargo.toml
crates/sterling-provider-openai/src/: chat.rs  error.rs  lib.rs  responses.rs  types.rs
