[package]
name = "sterling-provider-anthropic"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
sterling-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }
